--- a/form.html
+++ b/form.html
@@ -10,9 +10,9 @@
                     <div id="block-b1695143622538" class="ao-input-block ao-left">
                         <label for="b1695143622538" class="ao-form-label">
                             Why is this data irrelevant?
+                                    <span class="ao-required">*</span>
                         </label>
-                        <input id="b1695143622538" name="accept" type="text" placeholder=" " value="" data-type="text"
-                            tabindex="1" class="ao-form-field ao-left" data-error-message="" data-validator="">
+                        <input id="b1695143622538" name="Why Reject" type="text" placeholder=" " value="" data-type="text" tabindex="1" class="ao-form-field ao-left" data-error-message="required|Required field" data-validator="required">
                         <span class="ao-form-error-message">&nbsp;</span>
                     </div>
                 </div>
