--- a/table.html
+++ b/table.html
@@ -8,32 +8,32 @@
 			<th>Accept</th>
 		</tr>
 		<tr>
-			<td width="10%"> </td>
-			<td width="30%">Jane Doe</td>
+			<td width="10%">??</td>
+			<td width="30%" class="notes" id="#VZ231001">Jane Doe</td>
 			<td width="30%">jane.doe@foo.com</td>
 			<td width="10%" class="synopsis"><a href="#Item1Synopsis">Read <i class="fa-solid fa-circle-plus"></i></a></td>
-			<td width="20%" class="accept"><i class="fa-solid fa-thumbs-up up"></i> &nbsp; <a href="#Item1Form"><i class="fa-solid fa-thumbs-down down"></i></a></td>
+			<td width="20%" class="accept" value="jane.doe@foo.com"><i class="fa-solid fa-thumbs-up up"></i> &nbsp; <a href="#Item1Form"><i class="fa-solid fa-thumbs-down down"></i></a></td>
 		</tr>
 		<tr>
-			<td><img src="https://i.picsum.photos/id/1027/100/100.jpg" alt="" /></td>
-			<td>John Doe</td>
+			<td >??</td>
+			<td class="notes" id="#VZ231002">John Doe</td>
 			<td>john.doe@foo.com</td>
 			<td width="18%" class="synopsis"><a href="#Item1Synopsis">Read <i class="fa-solid fa-circle-plus"></i></a></td>
-			<td width="10%" class="accept"><i class="fa-solid fa-thumbs-up up"></i> &nbsp; <a href="#Item1Form"><i class="fa-solid fa-thumbs-down down"></i></a></td>
+			<td width="10%" class="accept" value="john.doe@foo.com"><i class="fa-solid fa-thumbs-up up"></i> &nbsp; <a href="#Item1Form"><i class="fa-solid fa-thumbs-down down"></i></a></td>
 		</tr>
 		<tr>
-			<td><img src="https://i.picsum.photos/id/64/100/100.jpg" alt="" /></td>
-			<td>Jane Smith</td>
+			<td>??</td>
+			<td class="notes" id="#VZ231003">Jane Smith</td>
 			<td>jane.smith@foo.com</td>
 			<td width="18%" class="synopsis"><a href="#Item1Synopsis">Read <i class="fa-solid fa-circle-plus"></i></a></td>
-			<td width="10%" class="accept"><i class="fa-solid fa-thumbs-up up"></i> &nbsp; <a href="#Item1Form"><i class="fa-solid fa-thumbs-down down"></i></a></td>
+			<td width="10%" class="accept" value="jane.smith@foo.com"><i class="fa-solid fa-thumbs-up up"></i> &nbsp; <a href="#Item1Form"><i class="fa-solid fa-thumbs-down down"></i></a></td>
 		</tr>
 		<tr>
-			<td><img src="https://i.picsum.photos/id/1025/100/100.jpg" alt="" /></td>
-			<td>John Smith</td>
+			<td>??</td>
+			<td class="notes" id="#VZ231004">John Smith</td>
 			<td>john.smith@foo.com</td>
 			<td width="18%" class="synopsis"><a href="#Item1Synopsis">Read <i class="fa-solid fa-circle-plus"></i></a></td>
-			<td width="10%" class="accept"><i class="fa-solid fa-thumbs-up up"></i> &nbsp; <a href="#Item1Form"><i class="fa-solid fa-thumbs-down down"></i></a></td>
+			<td width="10%" class="accept" value="john.smith@foo.com"><i class="fa-solid fa-thumbs-up up"></i> &nbsp; <a href="#Item1Form"><i class="fa-solid fa-thumbs-down down"></i></a></td>
 		</tr>
 	</tbody>
 </table>
